--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
+# API服务依赖
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 pydantic>=2.5.0,<3.0.0
 aiohttp>=3.9.0
+requests>=2.31.0
+
+# 基础深度学习 (API服务需要)
 torch>=2.0.0
 torch_npu
-transformers>=4.30.0
-diffusers>=0.20.0
 numpy>=1.24.0
 Pillow>=10.0.0
+
+# AI模型库 (API服务需要的最低版本)
+transformers>=4.30.0
+diffusers>=0.20.0
